--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,18 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.1.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>4.1.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
